<resources>
    <string name="app_name">TicketingModernland</string>

    <string name="input_username">Input Username</string>
    <string name="input_password">Input Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="register">Register ?</string>

    <string-array name="aplikasi">
        <item>--Akses Aplikasi--</item>
        <item>AST Desktop</item>
        <item>AST WEB</item>
    </string-array>

    <string name="title_activity_basic">BasicActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
